# pkmn

./: .gitignore  Makefile.am  README.md  TODO.org  configure.ac  default.nix  notes.org
.github/workflows/: pkmn.yml
res/bins/: bytes  test  test.c
res/images/: font-v3-5.xcf
src/: #main.c#  .#TODO.org  Makefile  Makefile.am  Makefile.in  asset_manager.c  asset_manager.h  assets.h  common.h  console.c  console.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  makefile  state.c  state.h  time.c  utils.c  utils.h
src/asset/: asset_manager.c  asset_manager.h  assets.h
src/draw/: draw.c  draw.h  render.c
src/init/: init.c  init.h
src/input/: input.c  input.h
src/time/: date_time.c  date_time.h
src/utils/: resources.c  resources.h  tree.c  tree.h
