AC_INIT([pkmn], [0.1], [robin.white280@gmail.com])

AC_CONFIG_AUX_DIR([configs])

AM_INIT_AUTOMAKE([subdir-objects])

AC_CONFIG_SRCDIR([src])

AC_PROG_CC

AC_CONFIG_HEADERS([config.h])

SDL_VERSION=2.0
AM_PATH_SDL2($SDL_VERSION,:,AC_MSG_ERROR([*** No SDL $SDL_VERSION found please install it ***]))

PKG_CHECK_MODULES(SDL_IMAGE, SDL2_image)

CFLAGS="$CFLAGS $SDL_CFLAGS $SDL_IMAGE_CFLAGS"
LIBS="$LIBS $SDL_LIBS $SDL_IMAGE_LIBS"


AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
